<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hadisler"
            android:icon="@drawable/hadisler_menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search_hadisler"
            android:icon="@drawable/search_menu"
            android:title="@string/menu_search_hadisler" />
        <item
            android:id="@+id/nav_sakli_hadisler"
            android:icon="@drawable/saklihadisler_menu"
            android:title="@string/menu_sakli_hadisler" />
        <item
            android:id="@+id/nav_notlar"
            android:icon="@drawable/notlar_menu"
            android:title="@string/menu_notlar" />

        <item
            android:id="@+id/nav_notifler"
            android:icon="@drawable/notifs_menu"
            android:title="@string/hint_menu_nav_notifler" />
<!--        <item-->
<!--            android:id="@+id/nav_test"-->
<!--            android:icon="@drawable/ic_search_24"-->
<!--            android:title="@string/home_test" />-->
    </group>
</menu>