<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hadisler">

    <fragment
        android:id="@+id/nav_hadisler"
        android:name="com.ykpylcn.kutubisittehadisler_v1.ui.hadisler.HadislerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_hadisler" />
    <fragment
        android:id="@+id/nav_notlar"
        android:name="com.ykpylcn.kutubisittehadisler_v1.ui.notlar.NotlarFragment"
        android:label="@string/menu_notlar"
        tools:layout="@layout/fragment_notlar" />

    <fragment
        android:id="@+id/nav_sakli_hadisler"
        android:name="com.ykpylcn.kutubisittehadisler_v1.ui.favoriler.SakliHadislerFragment"
        android:label="@string/menu_sakli_hadisler"
        tools:layout="@layout/fragment_sakli_hadisler" />

    <fragment
        android:id="@+id/nav_search_hadisler"
        android:name="com.ykpylcn.kutubisittehadisler_v1.ui.search.SearchFragment"
        android:label="@string/menu_search_hadisler"
        tools:layout="@layout/fragment_search_hadisler" />


</navigation>